--- a/style.css
+++ b/style.css
@@ -40,13 +40,18 @@ body {
 
   } 
   .container {
+    margin-left: 300px;
+    margin-right: 300px;
+    display: flex;
     justify-content: center;
     align-items: center;
     width: 700px;
     display: flex;
     min-height: 80vh;
   }
+
   .form-box {
+    position: relative;
     width: 700px;
     height: 700px;
     border: 2px solid rgb(32, 21, 95);
