--- a/style.css
+++ b/style.css
@@ -45,8 +45,9 @@ body {
     width: 700px;
     display: flex;
     min-height: 80vh;
+    padding-left: 50%;
   }
-
+ 
   .form-box {
     position: relative;
     width: 700px;
@@ -58,8 +59,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 95px;
   }
-  .form-box h2 {
+    .form-box h2 {
     color: rgb(32, 21, 95);
     text-align: center;
     font-size: 30px;
@@ -165,22 +167,21 @@ box-shadow: 3px 0 10px rgb(32, 21, 95);
      }
 
      .popup {
-      top: -1;
+      top: 0;
       left: 50%;
       transform: translate(-50%, 50%) scale(0);
       width: 650px;
-      margin-top: 20px;
-      transition: transform .4s , top .4s ;
+      margin-top: -100px;
+      transition: transform .4s , top .4s;
       visibility: hidden;
       background-color: #fff;
       border-radius: 6px;
       position: absolute;
       text-align: center;
-      padding: 0 80px 80px;
-      height: 600px;
+      padding: 10px 80px 150px 80px;
+      height: 550px;
       color: black;
-     }
-
+    }
      .popup ion-icon {
       color: green;
       font-size: 54px;
